Use JDK immutable lists to reduce arity of List invokeInterface